--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
 		"kint-php/kint": "^3.3",
 		"laminas/laminas-escaper": "^2.6",
 		"psr/log": "^1.1",
-		"fzaninotto/faker": "^1.9"
+		"fakerphp/faker": "^1.13"
 	},
 	"require-dev": {
 		"codeigniter4/codeigniter4-standard": "^1.0",
